fix: remove blurred effect on go pro cover image

--- a/src/app/features/settings/go-pro/go-pro-media-item-detail-on-camera/go-pro-media-item-detail-on-camera.component.scss
+++ b/src/app/features/settings/go-pro/go-pro-media-item-detail-on-camera/go-pro-media-item-detail-on-camera.component.scss
@@ -19,11 +19,6 @@ ion-img {
   width: 72px;
 }
 
-.thumbnail-blurred {
-  -webkit-filter: blur(0.5rem); /* Safari 6.0 - 9.0 */
-  filter: blur(0.5rem);
-}
-
 video {
   background-color: black;
   width: 100%;
